<resources>
    <string name="app_name">Dice Roll</string>
    <string name="result_txt">Result is %d</string>
    <string name="list_of_possibilities">List of possibilities of a dice of %d sides</string>
    <string name="possibility_n">Possibility %d</string>
    <string name="roll">ROLL</string>
    <string name="show_list">Show list</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
</resources>